<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- only one item can be clicked-->
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/title_home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/title_profile"
            android:icon="@drawable/ic_profile"/>
        <item
            android:id="@+id/nav_bookmark"
            android:title="@string/title_bookmark"
            android:icon="@drawable/ic_bookmark"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/title_logout"
            android:icon="@drawable/ic_logout"/>
    </group>

</menu>